@@ -45,14 +45,18 @@ Colors used:
 }
 
 /* Topic listings */
-#forum tr.sticky-topic {
-  background: #DEDEDE;
+#forum tr.sticky {
+  background-color: #DEDEDE;
 }
 
-#forum td.created,
-#forum td.last-reply {
-  font-size: 0.9em;
+#forum tr.forum-last-sticky {
+  border-bottom: 10px solid #CCCCCC;
 }
+
+#forum .sticky-label {
+  font-weight: bold;
+}
+
 
 /*** FORUM STATISTICS *********************************************************/
 
