@@ -8,6 +8,7 @@ June 18, 2009
 #484052 by Michelle: Fixed up the topic list pager & the #new.
 #484052 by Michelle: Moved topic list view preprocess to its own .inc
 #484052 by Michelle: Improved shadow topics including adding a new theme function for them.
+#484052 by Michelle: Added "Sticky:" label and changed background color.
 
 June 17, 2009
 -------------
